fix: make styles more universal for content alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,17 +3,6 @@ body {
     background: slategrey;
 }
 
-main {
-    background: white;
-    display: block;
-    margin: -8px 0 0 0;
-    padding: 1em;
-    border-radius: 3px;
-    position: relative;
-    border: 3px solid white;
-    min-height: 75vh;
-}
-
 .layout-wrapper {
     display: flex;
     flex-direction: column;
