--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -2,8 +2,6 @@
 
     @media (min-width: 60em) {
         display: flex;
-        max-width: 1200px;
-        margin: 0 auto;
         > div {
             min-height: 60vh;
         }
@@ -33,8 +31,6 @@
 }
 
 .post-content {
-    max-width: 1200px;
-    margin: 0 auto;
     img {
         width: 400px;
     }
